--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,7 +106,7 @@ android {
         Pro {
 //            applicationIdSuffix ".pro"
             buildConfigField "String", "SERVER_URL", "\"https://epos.cn/\""
-            buildConfigField "String", "H5_BASE_URL", "\"https://helperapp.sandload.cn\""
+            buildConfigField "String", "H5_BASE_URL", "\"https://pos.eywhisky.com/login?redirect=/\""
             manifestPlaceholders = [APP_NAME : "FMEPos"]
         }
     }
